objects/Activity.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Time Tracking...Hours worked.</description>
        <label>Hours (Time Track)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SL_Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SL Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC_LEGACY_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Meeting_Date__c</fullName>
        <label>SL Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SL_Meeting_Name__c</fullName>
        <label>SL Meeting Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Meeting_Type__c</fullName>
        <label>SL Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Best &amp; Final</fullName>
                </value>
                <value>
                    <fullName>Direct ATPI Product Demonstration</fullName>
                </value>
                <value>
                    <fullName>Direct Travel Discussion</fullName>
                </value>
                <value>
                    <fullName>Direct Travel Presentation</fullName>
                </value>
                <value>
                    <fullName>Direct Travel Resources &amp; Capabilities</fullName>
                </value>
                <value>
                    <fullName>DT Discovery Call</fullName>
                </value>
                <value>
                    <fullName>DT Product Demonstration</fullName>
                </value>
                <value>
                    <fullName>Next Steps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Due_Date__c</fullName>
        <label>Pricing Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SL_Meeting_Source__c</fullName>
        <label>SL Meeting Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Filename__c</fullName>
        <label>Attachment_Filename</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Meeting_Duration__c</fullName>
        <label>SL Meeting Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SL_Meeting_Booked_By__c</fullName>
        <label>SL Meeting Booked By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Meeting_Start_Time__c</fullName>
        <label>SL Meeting Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SL_Meeting_Assigned_To__c</fullName>
        <label>SL Meeting Assigned To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Meeting_Recording_URL__c</fullName>
        <label>SL Meeting Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SL_Meeting_Cancelled_Date__c</fullName>
        <label>SL Meeting Cancelled Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>